
o FIX: further correction to `EKC` (uses `cumsum(eigenvalues)` rather than `sum(eigenvalues)`)

o ADD: `add_wording_effects` will add wording effects such as acquiescence, difficulty, random careless, straight line, or some combination of the four to a simulated factor model

o ADD: `ESEM` to perform Exploratory Structural Equation Modeling using {lavaan} (allows wording effects to be estimated)

o FIX: `factor_forest` uses raw data in `psych::fa.parallel` rather than correlation matrix


Changes in version 0.0.4

o FIX: correction to `EKC` (used `factor_forest`'s version of EKC which used reference values rather than eigenvalues); `EKC` uses eigenvalues whereas `factor_forest` uses reference (which was what the random forest model was trained on)

o FIX: cross-loadings with population error are screened for communalities >= 0.80; communalities near 0.90 prior to population error would often get stuck and not converge

o ADD: `skew` argument for continuous data


Changes in version 0.0.3

o ADD: `add_population_error` will add population error, using {bifactor}, to a simulated factor model

o ADD: `data_to_zipfs` to transform data to Zipf's distribution from `simulate_factors`

o ADD: `obtain_zipfs_parameters` to obtain a dataset's best fitting Zipf's distribution parameters

o ADD: `NEST` Next Eigenvalue Sufficiency Test to estimate dimensions

o ADD: `estimate_dimensions` provides a single function to estimate dimensions using state-of-the-art methods: Exploratory Graph Analysis (EGA),
Exploratory Factor Analysis with out-of-sample prediction (FSPE), Next Eigenvalue Sufficiency Test (NEST), parallel analysis (PA), and Factor Forest


Changes in version 0.0.2

o UPDATE: skews for categories now include 6 categories

o UPDATE: available skew increments are now 0.05 (were 0.50 previously)

o ADD: `add_local_dependence` will add local dependence between variables from a simulated factor model


Initial commit version 0.0.1